==> ChibiOS/ChibiOS-Contrib/os/hal/ports/SAM/LLD/SERCOMv1/hal_i2c_lld.c <==
#include "hal.h"
#include "sercom_clk.h"
#define i2c_lld_get_rxbytes(i2cp) (i2cp)->rxbytes
#define i2c_lld_get_txbytes(i2cp) (i2cp)->txbytes
#define SERCOM_I2C_CTRLA_FORBIDDEN (SERCOM_I2CM_CTRLA_MODE_Msk |   \
                                    SERCOM_I2CM_CTRLA_ENABLE_Msk | \
                                    SERCOM_I2CM_CTRLA_SWRST_Msk |  \
                                    SERCOM_I2CM_CTRLA_SPEED_Msk)

void i2c_lld_init(void)
{

#if SAM_I2C_USE_SERCOM0 == TRUE
  i2cObjectInit(&I2CD1);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM0_Msk;
  I2CD1.i2c = &SERCOM0_REGS->I2CM;
  I2CD1.clock = SAM_SERCOM0_GCLK_SRC_FREQ;
#endif
#if SAM_I2C_USE_SERCOM1 == TRUE
  i2cObjectInit(&I2CD2);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM1_Msk;
  I2CD2.i2c = &SERCOM1_REGS->I2CM;
  I2CD2.clock = SAM_SERCOM1_GCLK_SRC_FREQ;
#endif
#if SAM_I2C_USE_SERCOM2 == TRUE
  i2cObjectInit(&I2CD3);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM2_Msk;
  I2CD3.i2c = &SERCOM2_REGS->I2CM;
  I2CD3.clock = SAM_SERCOM2_GCLK_SRC_FREQ;
#endif
#if SAM_I2C_USE_SERCOM3 == TRUE
  i2cObjectInit(&I2CD4);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM3_Msk;
  I2CD4.i2c = &SERCOM3_REGS->I2CM;
  I2CD4.clock = SAM_SERCOM3_GCLK_SRC_FREQ;
#endif
#if SAM_I2C_USE_SERCOM4 == TRUE
  i2cObjectInit(&I2CD5);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM4_Msk;
  I2CD5.i2c = &SERCOM4_REGS->I2CM;
  I2CD5.clock = SAM_SERCOM4_GCLK_SRC_FREQ;
#endif
#if SAM_I2C_USE_SERCOM5 == TRUE
  i2cObjectInit(&I2CD6);
  PM_REGS->PM_APBCMASK |= PM_APBCMASK_SERCOM5_Msk;
  I2CD6.i2c = &SERCOM5_REGS->I2CM;
  I2CD6.clock = SAM_SERCOM5_GCLK_SRC_FREQ;
#endif
}

void i2c_lld_start(I2CDriver *i2cp)
{

  if (i2cp->state == I2C_STOP)
  {
    sercom_i2cm_registers_t *dp = i2cp->i2c;
    /* Enables the peripheral.*/
#if SAM_I2C_USE_SERCOM0 == TRUE
    if (&I2CD1 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM0_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM0_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM0_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM0_CORE_Val, 1);
      nvicEnableVector(SERCOM0_IRQn, SAM_SERCOM0_IRQ_PRIORITY);
    }
#endif

#if SAM_I2C_USE_SERCOM1 == TRUE
    if (&I2CD2 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM1_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM1_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM1_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM1_CORE_Val, 1);
      nvicEnableVector(SERCOM1_IRQn, SAM_SERCOM1_IRQ_PRIORITY);
    }
#endif

#if SAM_I2C_USE_SERCOM2 == TRUE
    if (&I2CD3 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM2_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM2_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM2_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM2_CORE_Val, 1);
      nvicEnableVector(SERCOM2_IRQn, SAM_SERCOM1_IRQ_PRIORITY);
    }
#endif

#if SAM_I2C_USE_SERCOM3 == TRUE
    if (&I2CD4 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM3_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM3_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM3_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM3_CORE_Val, 1);
      nvicEnableVector(SERCOM3_IRQn, SAM_SERCOM3_IRQ_PRIORITY);
    }
#endif

#if SAM_I2C_USE_SERCOM4 == TRUE
    if (&I2CD5 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM4_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM4_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM4_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM4_CORE_Val, 1);
      nvicEnableVector(SERCOM4_IRQn, SAM_SERCOM4_IRQ_PRIORITY);
    }
#endif

#if SAM_I2C_USE_SERCOM5 == TRUE
    if (&I2CD6 == i2cp)
    {
      sam_gclk_mux(SAM_SERCOM5_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM5_CORE_Val, 0);
      sam_gclk_mux(SAM_SERCOM5_GCLK_SRC_ID, GCLK_CLKCTRL_ID_SERCOM5_CORE_Val, 1);
      nvicEnableVector(SERCOM5_IRQn, SAM_SERCOM5_IRQ_PRIORITY);
    }
#endif
    // Resetting sercom module
    i2cp->i2c->SERCOM_CTRLA = SERCOM_I2CM_CTRLA_SWRST_Msk;

    /* Wait for synchronization */
    sam_i2c_busy_wait(i2cp);

    /* Enable smart mode */
    dp->SERCOM_CTRLB = SERCOM_I2CM_CTRLB_SMEN_Msk;
    uint32_t baud_val = 0;
    osalDbgAssert(sam_i2c_cal_baud(i2cp->clock, i2cp->config->i2cSpeed, &baud_val), "unable to calculate baud");
    dp->SERCOM_BAUD = baud_val;
    dp->SERCOM_CTRLA = SERCOM_I2CM_CTRLA_MODE_I2C_MASTER | (i2cp->config->ctrla & ~SERCOM_I2C_CTRLA_FORBIDDEN) | SERCOM_I2CM_CTRLA_ENABLE_Msk;
    sam_i2c_busy_wait(i2cp);
    i2cp->i2c->SERCOM_STATUS = (uint16_t)SERCOM_I2CM_STATUS_BUSSTATE(0x01UL);
    sam_i2c_busy_wait(i2cp);
  }
}

void i2c_lld_stop(I2CDriver *i2cp)
{
  if (i2cp->state != I2C_STOP)
  {
    i2c_lld_abort_operation(i2cp);
    /* Disables the peripheral.*/
#if SAM_I2C_USE_SERCOM1 == TRUE
    if (&I2CD2 == i2cp)
    {
      nvicDisableVector(SERCOM1_IRQn);
    }
#endif
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     sysinterval_t timeout)
{
  msg_t msg;
  sercom_i2cm_registers_t *dp = i2cp->i2c;
  systime_t start, end;
  osalSysUnlock();
  i2cp->rxptr = rxbuf;
  i2cp->rxbytes = rxbytes;
  start = osalOsGetSystemTimeX();
  end = osalTimeAddX(start, OSAL_MS2I(SAM_I2C_BUSY_TIMEOUT));
  /* Waits until BUSY flag is reset or, alternatively, for a timeout
      condition.*/
  while (true)
  {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if (((dp->SERCOM_STATUS & SERCOM_I2CM_STATUS_BUSSTATE_Msk) == SERCOM_I2CM_STATUS_BUSSTATE(0x01U)))
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalTimeIsInRangeX(osalOsGetSystemTimeX(), start, end))
    {
      return MSG_TIMEOUT;
    }
    osalSysUnlock();
  }
  dp->SERCOM_INTFLAG = (uint8_t)SERCOM_I2CM_INTFLAG_Msk;
  dp->SERCOM_INTENSET = (uint8_t)SERCOM_I2CM_INTENSET_Msk;
  dp->SERCOM_CTRLB &= ~SERCOM_I2CM_CTRLB_ACKACT_Msk;
  sam_i2c_busy_wait(i2cp);
  i2c_lld_set_address(i2cp, addr, true);
  msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
  if (msg == MSG_TIMEOUT)
  {
    dp->SERCOM_CTRLB |= SERCOM_I2CM_CTRLB_CMD(3UL);
    sam_i2c_busy_wait(i2cp);
  }
  return msg;
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      sysinterval_t timeout)
{
  msg_t msg;
  sercom_i2cm_registers_t *dp = i2cp->i2c;
  systime_t start, end;
  osalSysUnlock();
  i2cp->txbytes = txbytes;
  i2cp->txptr = txbuf;
  i2cp->rxptr = rxbuf;
  i2cp->rxbytes = rxbytes;
  start = osalOsGetSystemTimeX();
  end = osalTimeAddX(start, OSAL_MS2I(SAM_I2C_BUSY_TIMEOUT));
  /* Waits until BUSY flag is reset or, alternatively, for a timeout
      condition.*/
  while (true)
  {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if (((dp->SERCOM_STATUS & SERCOM_I2CM_STATUS_BUSSTATE_Msk) == SERCOM_I2CM_STATUS_BUSSTATE(0x01U)))
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalTimeIsInRangeX(osalOsGetSystemTimeX(), start, end))
    {
      return MSG_TIMEOUT;
    }
    osalSysUnlock();
  }
  dp->SERCOM_INTFLAG = (uint8_t)SERCOM_I2CM_INTFLAG_Msk;
  dp->SERCOM_INTENSET = (uint8_t)SERCOM_I2CM_INTENSET_Msk;
  dp->SERCOM_CTRLB &= ~SERCOM_I2CM_CTRLB_ACKACT_Msk;
  sam_i2c_busy_wait(i2cp);
  i2c_lld_set_address(i2cp, addr, false);
  msg = osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
  if (msg == MSG_TIMEOUT)
  {
    dp->SERCOM_CTRLB |= SERCOM_I2CM_CTRLB_CMD(3UL);
    sam_i2c_busy_wait(i2cp);
  }
  return msg;
}
